--- a/single-event.html
+++ b/single-event.html
@@ -46,7 +46,7 @@
                                 <!-- LOGO START
                                 ============================================= -->
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/dugem-logos.png" alt="Dugem Logo" /></a>
+                                    <a href="index.html"><img src="img/vuonnhan-logo.svg" alt="VuonNhan Logo" class="img--logo" /></a>
                                 </div>
                                 <!-- LOGO END -->
                             </div>
@@ -240,7 +240,7 @@
                             <div class="row">
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div class="logo-footer">
-                                        <a href="index.html"><img src="img/dugem-logos.png" alt="Logo-Footer" /></a>
+                                        <a href="index.html"><img src="img/vuonnhan-logo.svg" alt="Logo-Footer" /></a>
                                     </div>
                                 </div>
                                 <div class="foot-col column column-1 text-center clearfix">
