--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="image-background">
                     </div>
                     <div class="image-title">
-                        <p>At vero eos et accusamus et iusto odio dignissimos</p>
-                        <p> ducimus qui blanditiis</p>
+                        <p>Sinh Nhật Thái Hoa Duối </p>
+                        <p> Lần 18+5</p>
                         <a href="#" class="button-basic-1" data-aos="fade-up">All Events</a>
                     </div>
                     <div class="video-background">
@@ -122,33 +122,33 @@
                             <div class="global-counter col-span-7 sm:col-span-12 res:col-span-12">
                                 <div class="global-title">
                                     <a href="#" class="button-basic-1">Electro</a>
-                                    <h2 data-aos="fade-up">Global Fridays Glow Up 4.20</h2>
-                                    <h5 data-aos="fade-up">/ 26 SEPTEMBER 2021</h5>
-                                    <p class="dugem-text" data-aos="fade-up">Mauris varius porttitor suscipit. Quisque justo tortor, convallis id elit vitae, posuere ullamcorper ante. Sed in magna viverra, fermentum arcu sit amet, porttitor nulla. Vestibulum vestibulum sem neque.</p>
+                                    <h2 data-aos="fade-up">Sinh Nhật Thái Hoa Duối Lần 18+5</h2>
+                                    <h5 data-aos="fade-up">/ 10 OCTOBER 2022</h5>
+                                    <p class="dugem-text" data-aos="fade-up">Quẩy thôi.</p>
                                 </div>
                                 <div class="global-buy" data-aos="fade-up">
-                                    <a href="single-event.html" class="button-basic-1">View Detail</a>
-                                    <a href="#" class="button-basic-2">Get Ticket</a>
+                                    <a href="single-event.html" class="button-basic-1">CHI TIẾT</a>
+                                    <a href="#" class="button-basic-2">ĐẶT GẠCH</a>
                                 </div>
                                 <div class="global-countdown">
                                     <div class="event-counter clearfix">
                                         <div class="countdown">
                                             <div class="days-count float">
                                                 <h3 id="days"></h3>
-                                                <span>Days</span>
+                                                <span>Ngày</span>
                                             </div>
                                             <div class="hours-count float">
                                                 <h3 id="hours"></h3>
-                                                <span>Hours</span>
+                                                <span>Giờ</span>
                                             </div>
                                             <div class="minutes-count float">
                                                 <h3 id="minutes"></h3>
-                                                <span>Minutes</span>
+                                                <span>Phút</span>
                                             </div>
                                             <div class="seconds-count float">
                                                 <h3 id="seconds">
                                                 </h3>
-                                                <span>Seconds</span>
+                                                <span>Giây</span>
                                             </div>
                                         </div>
                                     </div>
@@ -167,7 +167,7 @@
                             <h5 class="head-title-2"> / EVENTS </h5>
                             <h2 class="head-title-1"> Upcoming Event
                                 <span class="title-end">.</span></h2>
-                            <p class="dugem-text"> Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
+                            <p class="dugem-text"> Ăn chơi sắp tới.</p>
                         </div>
                         <table class="event">
                             <tr>
