--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <div class="item-content">
                                     <div class="img-header">
                                         <a class="pattern" href="#">
-                                            <img src="img/event-img.png" alt="event-img">
+                                            <img src="https://html.themesawesome.com/dugemhtml/img/event-img.png" alt="event-img">
                                         </a>
                                     </div>
                                 </div>
@@ -583,9 +583,9 @@
                         <div class="book-wrap news-title grid grid-cols-12 gap-24">
                             <div class="the-title col-span-6 sm:col-span-12 res:col-span-12">
                                 <h5 class="head-title-2"> / RESERVATION </h5>
-                                <h2 class="head-title-1"> Book A Table Now
+                                <h2 class="head-title-1"> Đặt Cục Gạch Ngay
                                     <span class="title-end">.</span></h2>
-                                <p class="dugem-text"> Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. </p>
+                                <p class="dugem-text"> Nhanh tay đặt gạch ngay . </p>
                             </div>
                             <div class="contact-form-style col-span-6 sm:col-span-12 res:col-span-12">
                                 <input type="text" name="your-name" size="40" placeholder="Name">
