--- a/single-event.html
+++ b/single-event.html
@@ -99,7 +99,7 @@
                                 <div class="event-thumbnail col-span-5 sm:col-span-12 res:col-span-12">
                                     <div class="thumb-inner">
                                         <a href="#">
-                                            <img src="img/single-event-img.png" alt="single-event">
+                                            <img src="https://html.themesawesome.com/dugemhtml/img/event-img.png" alt="single-event">
                                         </a>
                                         <span></span>
                                     </div>
