feat: hatt event

--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="event-date">26/09/2021</td>
+                                <td class="event-date">08/10/2022</td>
                                 <td class="event-thumb">
                                     <a href="single-event.html">
-                                        <img width="70" height="100" src="img/upcoming-event-1.png" alt="table-1"> 
+                                        <img width="70" height="100" src="img/hatt.jpg" alt="table-1"> 
                                     </a>
                                 </td>
-                                <td class="event-artist">DJ Ocean &amp; DJ Thunder</td>
+                                <td class="event-artist">Biên đạo múa HaTT</td>
                                 <td class="event-title">
-                                    <a href="single-event.html">Global Fridays</a>
+                                    <a href="single-event.html">Đại lễ mừng thọ</a>
                                 </td>
                                 <td class="event-ticket-link">
                                     <a href="#" class="button button-white rsvp">BOOK</a>
