--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
-        <link rel="icon" href="img/fav-icon.png">
+        <link rel="icon" href="img/vuonnhan-logo-icon.svg">
         <script>
             document.documentElement.className = 'js';
 
@@ -28,7 +28,7 @@
 
         <!-- DOCUMENT TITLES
             ============================================= -->
-        <title>Contact | Dugem HTML Themes</title>
+        <title>Contact | Trung tâm tổ chức sự kiện VUONNHAN</title>
     </head>
 
     <body class="demo-1">
