--- a/event.html
+++ b/event.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
-        <link rel="icon" href="img/fav-icon.png">
+        <link rel="icon" href="img/vuonnhan-logo-icon.svg">
         <script>
             document.documentElement.className = 'js';
 
@@ -25,7 +25,7 @@
 
         <!-- DOCUMENT TITLES
             ============================================= -->
-        <title>Event | Dugem HTML Themes</title>
+        <title>Event | Trung tâm tổ chức sự kiện VUONNHAN</title>
     </head>
 
 
