--- a/single-post.html
+++ b/single-post.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
-        <link rel="icon" href="img/fav-icon.png">
+        <link rel="icon" href="img/vuonnhan-logo-icon.svg">
         <script>
             document.documentElement.className = 'js';
 
@@ -25,7 +25,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <!-- DOCUMENT TITLES
             ============================================= -->
-        <title>Single Post | Dugem HTML Themes</title>
+        <title>Single Post | Trung tâm tổ chức sự kiện VUONNHAN</title>
     </head>
 
     <body class="demo-1">
