feat: anhtv update

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="image-background">
                     </div>
                     <div class="image-title">
-                        <p>Sinh Nhật Thái Hoa Duối </p>
-                        <p> Lần 18+5</p>
+                        <p>Sinh Nhật Biên Đạo Múa HàTT</p>
+                        <p> Lần 18+50</p>
                         <a href="#" class="button-basic-1" data-aos="fade-up">All Events</a>
                     </div>
                     <div class="video-background">
@@ -122,8 +122,8 @@
                             <div class="global-counter col-span-7 sm:col-span-12 res:col-span-12">
                                 <div class="global-title">
                                     <a href="#" class="button-basic-1">Electro</a>
-                                    <h2 data-aos="fade-up">Sinh Nhật Thái Hoa Duối Lần 18+5</h2>
-                                    <h5 data-aos="fade-up">/ 10 OCTOBER 2022</h5>
+                                    <h2 data-aos="fade-up">Sinh Nhật Biên Đạo Múa HàTT Lần 18+50</h2>
+                                    <h5 data-aos="fade-up">/ 08 OCTOBER 2022</h5>
                                     <p class="dugem-text" data-aos="fade-up">Quẩy thôi.</p>
                                 </div>
                                 <div class="global-buy" data-aos="fade-up">
@@ -183,6 +183,22 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td class="event-date">29/09/2021</td>
+                                <td class="event-thumb">
+                                    <a href="single-event.html">
+                                        <img width="70" height="100" src="img/anhtv.jpg" alt="table-2"> 
+                                    </a>
+                                </td>
+                                <td class="event-artist">Thi sĩ AnhTV</td>
+                                <td class="event-title">
+                                    <a href="single-event.html">Rap Việt mùa 3</a>
+                                </td>
+                                <td class="event-ticket-link">
+                                    <a href="#" class="button button-white rsvp">BOOK</a>
+                                    <a href="#" class="button button-white">BUY TICKET</a>
+                                </td>
+                            </tr>
+                            <tr>
                                 <td class="event-date">08/10/2022</td>
                                 <td class="event-thumb">
                                     <a href="single-event.html">
@@ -201,21 +217,6 @@
                             <tr class="space">
                                 <td>
                                     &nbsp;
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="event-date">26/03/2021</td>
-                                <td class="event-thumb">
-                                    <a href="single-event.html">
-                                        <img width="70" height="100" src="img/upcoming-event-2.png" alt="table-2"> 
-                                    </a>
-                                </td>
-                                <td class="event-artist">W. Illinvois</td>
-                                <td class="event-title">
-                                    <a href="single-event.html">Chicago Indrustry</a>
-                                </td>
-                                <td class="event-ticket-link">
-                                    <span class="sold">EXPIRED</span>
                                 </td>
                             </tr>
                             <tr class="space">
