--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="image-background">
                     </div>
                     <div class="image-title">
-                        <p>Sinh Nhật Biên Đạo Múa HàTT</p>
-                        <p> Lần 18+50</p>
+                        <p>Chuyên Gia Trí Tạo Nhân Tuệ Thái Hoa Duối</p>
+                        <p> Lần 18+5</p>
                         <a href="#" class="button-basic-1" data-aos="fade-up">All Events</a>
                     </div>
                     <div class="video-background">
@@ -122,7 +122,7 @@
                             <div class="global-counter col-span-7 sm:col-span-12 res:col-span-12">
                                 <div class="global-title">
                                     <a href="#" class="button-basic-1">Electro</a>
-                                    <h2 data-aos="fade-up">Sinh Nhật Biên Đạo Múa HàTT Lần 18+50</h2>
+                                    <h2 data-aos="fade-up">Sinh Nhật Chuyên Gia Trí Tạo Nhân Tuệ Thái Hoa Duối Lần 18+50</h2>
                                     <h5 data-aos="fade-up">/ 08 OCTOBER 2022</h5>
                                     <p class="dugem-text" data-aos="fade-up">Quẩy thôi.</p>
                                 </div>
@@ -210,7 +210,7 @@
                                         <img width="70" height="100" src="img/hatt.jpg" alt="table-1"> 
                                     </a>
                                 </td>
-                                <td class="event-artist">Biên đạo múa HaTT</td>
+                                <td class="event-artist">Đại Lễ Mừng Thọ Chuyên Gia Trí Tạo Nhân Tuệ Thái Hoa Duối</td>
                                 <td class="event-title">
                                     <a href="single-event.html">Đại lễ mừng thọ</a>
                                 </td>
