--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 </td>
                                 <td class="event-artist">Họa sĩ NghiaLM</td>
                                 <td class="event-title">
-                                    <a href="single-event.html">Triển lãm nghệ thuật vẽ MÕM</a>
+                                    <a href="single-event.html">Triển lãm vẽ chuyện bằng MÕM</a>
                                 </td>
                                 <td class="event-ticket-link">
                                     <a href="#" class="button button-white rsvp">BOOK</a>
@@ -246,18 +246,19 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="event-date">26/05/2022</td>
+                                <td class="event-date">26/10/2022</td>
                                 <td class="event-thumb">
                                     <a href="single-event.html">
-                                        <img width="70" height="100" src="img/upcoming-event-4.png" alt="table-4"> 
+                                        <img width="70" height="100" src="img/linktvk.jpeg" alt="table-4"> 
                                     </a>
                                 </td>
-                                <td class="event-artist">Underground Music</td>
+                                <td class="event-artist">Hoa Khôi HB4 Zone</td>
                                 <td class="event-title">
-                                    <a href="single-event.html">EDM</a>
+                                    <a href="single-event.html">Đấu giá ủng hộ người nghèo</a>
                                 </td>
                                 <td class="event-ticket-link">
-                                    <span class="sold">EXPIRED</span>
+                                    <a href="#" class="button button-white rsvp">BOOK</a>
+                                    <a href="#" class="button button-white">BUY TICKET</a>
                                 </td>
                             </tr>
                             <tr class="space">
@@ -266,18 +267,19 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="event-date">26/06/2022</td>
+                                <td class="event-date">30/10/2022</td>
                                 <td class="event-thumb">
                                     <a href="single-event.html">
-                                        <img width="70" height="100" src="img/upcoming-event-5.png" alt="table-5"> 
+                                        <img width="70" height="100" src="img/donglv.jpeg" alt="table-5"> 
                                     </a>
                                 </td>
-                                <td class="event-artist">Bhad Bhabie</td>
+                                <td class="event-artist">DongLV climber</td>
                                 <td class="event-title">
-                                    <a href="single-event.html">Asian Dolls</a>
+                                    <a href="single-event.html">Hội nghị vượt qua 'NÓC' nhà</a>
                                 </td>
                                 <td class="event-ticket-link">
-                                    <span class="sold">EXPIRED</span>
+                                    <a href="#" class="button button-white rsvp">BOOK</a>
+                                    <a href="#" class="button button-white">BUY TICKET</a>
                                 </td>
                             </tr>
                             <tr class="space">
