--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                         <img width="70" height="100" src="img/hatt.jpg" alt="table-1"> 
                                     </a>
                                 </td>
-                                <td class="event-artist">Chuyên Gia Trí Tạo HaTT</td>
+                                <td class="event-artist">AI Engineer HaTT</td>
                                 <td class="event-title">
                                     <a href="single-event.html">Đại lễ mừng thọ</a>
                                 </td>
