fix: anhpn update event

--- a/event.html
+++ b/event.html
@@ -221,6 +221,27 @@
                                         &nbsp;
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td class="event-date">05/11/2022</td>
+                                    <td class="event-thumb">
+                                        <a href="single-event.html">
+                                            <img width="70" height="100" src="img/anhpn.jpeg" alt="table-5"> 
+                                        </a>
+                                    </td>
+                                    <td class="event-artist">Kẻ hủy diệt</td>
+                                    <td class="event-title">
+                                        <a href="single-event.html">Đại nhạc hội overnight</a>
+                                    </td>
+                                    <td class="event-ticket-link">
+                                        <a href="#" class="button button-white rsvp">BOOK</a>
+                                        <a href="#" class="button button-white">BUY TICKET</a>
+                                    </td>
+                                </tr>
+                                <tr class="space">
+                                    <td>
+                                        &nbsp;
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                         <div class="event-mobile">
