--- a/index.html
+++ b/index.html
@@ -564,12 +564,12 @@
                                             </div>
                                             <div class="testimonial-detail-inner">
                                                 <div class="testimonial-image">
-                                                    <img src="img/testimonial-profile-1.png" alt="testi-1">
+                                                    <img src="img/hatt-avatar.png" alt="testi-1">
                                                 </div>
                                                 <div class="test-info">
-                                                    <h5 class="testi-author">Amanda Zedda</h5>
+                                                    <h5 class="testi-author">Amanda HaTT</h5>
                                                     <cite class="testi-job">
-                                                        Photographer 
+                                                        Biên đạo múa
                                                     </cite>
                                                 </div>
                                             </div>
@@ -582,12 +582,13 @@
                                             </div>
                                             <div class="testimonial-detail-inner">
                                                 <div class="testimonial-image">
-                                                    <img src="img/testimonial-profile-2.png" alt="testi-2">
+                                                    <img src="img/hatt-avatar.png" alt="testi-1">
                                                 </div>
                                                 <div class="test-info">
-                                                    <h5 class="testi-author">Jennifer Aster</h5>
+                                                    <h5 class="testi-author">Amanda HaTT</h5>
                                                     <cite class="testi-job">
-                                                        Musician </cite>
+                                                        Biên đạo múa
+                                                    </cite>
                                                 </div>
                                             </div>
                                         </div>
