feat: update mobile

--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
                                 <li>
                                     <span class="img-thumb">
                                         <a href="single-event.html">
-                                            <img width="70" height="100" src="img/upcoming-event-1.png" alt="table-1-1">
+                                            <img width="70" height="100" src="img/anhtv.jpeg" alt="table-1-1">
                                          </a>
                                     </span>
                                     <p><span>Date :</span> <a href="#">26/09/2022</a></p>
-                                    <p><span>Artist :</span> <a href="#">DJ Ocean &amp; DJ Thunder</a></p>
-                                    <p><span>Event :</span> <a href="#">Global Fridays</a></p>
+                                    <p><span>Artist :</span> <a href="#">Thi sĩ ANhTV</a></p>
+                                    <p><span>Event :</span> <a href="#">Rap Việt mùa 3</a></p>
                                     <p>
                                         <a href="#" class="button-basic-1">BUY TICKET</a>
                                     </p>
@@ -327,12 +327,12 @@
                                 <li>
                                     <span class="img-thumb">
                                         <a href="single-event.html">
-                                            <img width="70" height="100" src="img/upcoming-event-2.png" alt="table-1-2"> 
+                                            <img width="70" height="100" src="img/hatt.jpg" alt="table-1-2"> 
                                         </a>
                                     </span>
-                                    <p><span>Date :</span> <a href="#">26/03/2022</a></p>
-                                    <p><span>Artist :</span> <a href="#">W. Illinvois</a></p>
-                                    <p><span>Event :</span> <a href="#">Chicago Indrustry</a></p>
+                                    <p><span>Date :</span> <a href="#">08/10/2022</a></p>
+                                    <p><span>Artist :</span> <a href="#">Biên đạo múa HaTT</a></p>
+                                    <p><span>Event :</span> <a href="#">Đại lễ mừng thọ</a></p>
                                     <p>
                                         <a href="#" class="button-basic-1">BUY TICKET</a>
                                     </p>
@@ -340,12 +340,12 @@
                                 <li>
                                     <span class="img-thumb">
                                         <a href="single-event.html">
-                                            <img width="70" height="100" src="img/upcoming-event-3.png" alt="table-1-3"> 
+                                            <img width="70" height="100" src="img/nghialm.jpg" alt="table-1-3"> 
                                         </a>
                                     </span>
-                                    <p><span>Date :</span> <a href="#">26/03/2022</a></p>
-                                    <p><span>Artist :</span> <a href="#">Apollo Xo</a></p>
-                                    <p><span>Event :</span> <a href="#">The Underground</a></p>
+                                    <p><span>Date :</span> <a href="#">15/10/2022</a></p>
+                                    <p><span>Artist :</span> <a href="#">Họa sĩ NghiaLM</a></p>
+                                    <p><span>Event :</span> <a href="#">Triển lãm vẽ chuyện bằng MÕM</a></p>
                                     <p>
                                         <a href="#" class="button-basic-1">BUY TICKET</a>
                                     </p>
@@ -353,7 +353,7 @@
                                 <li>
                                     <span class="img-thumb">
                                         <a href="single-event.html">
-                                            <img width="70" height="100" src="img/upcoming-event-4.png" alt="table-1-4">
+                                            <img width="70" height="100" src="img/donglv.jpeg" alt="table-1-4">
                                          </a>
                                     </span>
                                     <p><span>Date :</span> <a href="#">26/05/2022</a></p>
@@ -365,12 +365,38 @@
                                 <li>
                                     <span class="img-thumb">
                                         <a href="single-event.html">
-                                            <img width="70" height="100" src="img/upcoming-event-5.png" alt="table-1-5"> 
+                                            <img width="70" height="100" src="img/linktvk.jpeg" alt="table-1-5"> 
                                         </a>
                                     </span>
-                                    <p><span>Date :</span> <a href="#">26/06/2022</a></p>
-                                    <p><span>Artist :</span> <a href="#">Bhad Bhabie</a></p>
-                                    <p><span>Event :</span> <a href="#">Asian Dolls</a></p>
+                                    <p><span>Date :</span> <a href="#">20/10/2022</a></p>
+                                    <p><span>Artist :</span> <a href="#">Hoa Khôi HB4 Zone</a></p>
+                                    <p><span>Event :</span> <a href="#">Đấu giá ủng hộ người nghèo</a></p>
+                                    <p>
+                                        <a href="#" class="button-basic-1">BUY TICKET</a>
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="img-thumb">
+                                        <a href="single-event.html">
+                                            <img width="70" height="100" src="img/donglv.jpeg" alt="table-1-5"> 
+                                        </a>
+                                    </span>
+                                    <p><span>Date :</span> <a href="#">27/10/2022</a></p>
+                                    <p><span>Artist :</span> <a href="#">DongLV climber</a></p>
+                                    <p><span>Event :</span> <a href="#">Hội nghị vượt qua 'NÓC' nhà</a></p>
+                                    <p>
+                                        <a href="#" class="button-basic-1">BUY TICKET</a>
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="img-thumb">
+                                        <a href="single-event.html">
+                                            <img width="70" height="100" src="img/anhpn.jpeg" alt="table-1-5"> 
+                                        </a>
+                                    </span>
+                                    <p><span>Date :</span> <a href="#">31/10/2022</a></p>
+                                    <p><span>Artist :</span> <a href="#">Kẻ hủy diệt</a></p>
+                                    <p><span>Event :</span> <a href="#">Đại nhạc hội overnight</a></p>
                                     <p>
                                         <a href="#" class="button-basic-1">BUY TICKET</a>
                                     </p>
